Avoid nav-item overlap at large viewport

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -161,7 +161,7 @@ ul.columnwise {
     }
 }
 
-@include media-breakpoint-up(xl) {
+@include media-breakpoint-up(lg) {
     .navbar {
         padding-top: 0;
         padding-bottom: 0;
